rm lightning, usning frcnn for rpn adj dl accordingly

--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -9,13 +9,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -25,10 +18,12 @@
     "sys.path.append(os.path.abspath(os.path.join(os.path.dirname('../notebooks'))))\n",
     "\n",
     "from utils.utils import setup_mlflow, get_device\n",
-    "from utils.data_loader import load_data\n",
+    "from utils.data_loader import load_data, load_data_detection\n",
     "from models.classification.resnet_classification import Resnet18_Classification\n",
+    "from models.detection.resnet_detection import Resnet18_Detection\n",
     "from evaluation.classification.eval_classification import plot_confusion_matrix, plot_misclassified_images, get_all_preds\n",
     "from scripts.train_classification import train_classification\n",
+    "from scripts.train_detection import train_detection\n",
     "import torch\n",
     "import torchvision.models as models\n",
     "import mlflow\n",
@@ -175,26 +170,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = '../data/coco'\n",
-    "setup_mlflow(\"detection\", \"http://localhost:5000\") \n",
-    "os.makedirs(\"../evaluation/detection\", exist_ok=True)\n",
+    "import mlflow\n",
+    "import mlflow.pytorch\n",
     "\n",
+    "data_dir = '../data/coco'\n",
+    "\n",
+    "\n",
+    "mlflow.set_tracking_uri(\"http://localhost:5000\")\n",
+    "mlflow.set_experiment(\"detection\")\n",
     "\n",
     "with mlflow.start_run():\n",
-    "    mlflow.log_param(\"epochs\", 50)\n",
-    "    mlflow.log_param(\"batch_size\", 128)\n",
-    "    mlflow.log_param(\"learning_rate\", 0.003)\n",
+    "    mlflow.log_param(\"epochs\", 10)\n",
+    "    mlflow.log_param(\"batch_size\", 2)\n",
+    "    mlflow.log_param(\"learning_rate\", 0.001)\n",
     "    mlflow.log_param(\"momentum\", 0.9)\n",
     "    \n",
     "    net = Resnet18_Detection().to(device)\n",
-    "    trainloader, testloader, class_names = load_data(data_dir, batch_size=128, shuffle=True, resize_x=224, resize_y=224)\n",
-    "    trained_net = train_classification(net, trainloader, testloader, device, num_epochs=5)\n",
+    "    trainloader, valloader = load_data_detection(data_dir, batch_size=2, shuffle=True)\n",
+    "    trained_net = train_detection(net, trainloader, valloader, device, num_epochs=10)\n",
     "\n",
     "    save_path = '../models_saved/detection.pth'\n",
     "    torch.save(trained_net.state_dict(), save_path)\n",
     "    mlflow.pytorch.log_model(trained_net, \"model\")\n",
-    "    mlflow.log_artifact(save_path)\n",
-    "\n"
+    "    mlflow.log_artifact(save_path)"
    ]
   },
   {
