--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -17,17 +17,25 @@
     "import sys\n",
     "sys.path.append(os.path.abspath(os.path.join(os.path.dirname('../notebooks'))))\n",
     "\n",
-    "from utils.utils import setup_mlflow, get_device\n",
-    "from utils.data_loader import load_data_classifier, load_data_detection\n",
-    "from models.classification.resnet_classification import Resnet18_Classification\n",
-    "from models.detection.resnet_detection import Resnet18_Detection\n",
-    "from evaluation.classification.eval_classification import plot_confusion_matrix, plot_misclassified_images, get_all_preds\n",
-    "from scripts.train_classification import train_classification\n",
-    "from scripts.train_detection import train_detection\n",
     "import torch\n",
     "import torchvision.models as models\n",
     "import mlflow\n",
+    "import mlflow.pytorch\n",
+    "\n",
+    "from utils.utils import setup_mlflow, get_device\n",
+    "from utils.data_loader import load_data_classifier, load_data_detection\n",
+    "\n",
+    "from models.classification.resnet_classification import Resnet18_Classification\n",
+    "from models.detection.resnet_detection import Resnet18_Detection\n",
+    "from models.segmentation.resnet_segmentation import Resnet18_Segmentation\n",
+    "\n",
+    "from evaluation.classification.eval_classification import plot_confusion_matrix, plot_misclassified_images, get_all_preds\n",
     "from sklearn.metrics import classification_report\n",
+    "\n",
+    "from scripts.train_classification import train_classification\n",
+    "from scripts.train_detection import train_detection\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -304,8 +312,6 @@
     }
    ],
    "source": [
-    "import mlflow\n",
-    "import mlflow.pytorch\n",
     "\n",
     "data_dir = '../data/coco'\n",
     "\n",
@@ -342,11 +348,7 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# mlflow.set_experiment(\"COCO_ResNet_Segmentation_Training\")\n",
-    "# with mlflow.start_run(run_name=\"Segmentation_Model\"):\n",
-    "#     train_segmentation()  "
-   ]
+   "source": []
   }
  ],
  "metadata": {
